# ops-pilot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_demo.py  run_review_demo.py  run_server.py
.github/workflows/: ci.yml
data/examples/: club_metrics.csv  club_ops_notes.md  club_post_pilot_notes.md
docs/: architecture.md  evaluation.md  sample_brief.md
src/ops_pilot/: __init__.py  analysis.py  briefing.py  config.py  llm.py  models.py  parsing.py  post_pilot.py  retrieval.py  server.py  service.py  utils.py
src/ops_pilot/static/: app.js  index.html  style.css
tests/: test_agent.py  test_parsing.py  test_server.py
