[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-pilot"
version = "0.1.0"
description = "A small-team pilot planner that turns workflow context into an AI pilot brief."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["ai-agent", "llm", "pilot-planning", "roi", "workflow-automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
ops-pilot-server = "ops_pilot.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ops_pilot = ["static/*"]
